--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                     <li class="nav__item">
                         <a href="#work" class="nav__link" active-link>Portfolio</a>
                     </li>
+
+                    <li class="nav__item">
+                        <a href="#contact" class="nav__link" active-link>Contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -64,6 +68,9 @@
 
             <!--================= PORTFOLIO ===================-->
             <section class="porfolio"></section>
+
+            <!--================= CONTACT US ==================-->
+            <section class="contact"></section>
         </main>
     </body>
 </html>
