--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#experience" class="nav__link" active-link>Experience</a>
+                        <a href="#qualification" class="nav__link" active-link>Experience</a>
                     </li>
 
                     <li class="nav__item">
@@ -52,7 +52,30 @@
         <!--==================== MAIN =======================-->
         <main class="main">
             <!--================== HOME =======================-->  
-            <section class="home" id="home"></section>
+            <section class="home" id="home">
+                <div class="home__container container grid">
+                    <div class="home__content">
+                        <span class="home__small">Hello</span>
+                        <h1 class="home__title">
+                            <span>I'm</span> Alexandera <br />
+                             a <span>UI/UX Designer</span>
+                        </h1>
+
+                        <p class="home__description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem impedit laborum nesciunt animi fuga perferendis, perspiciatis aspernatur omnis laboriosam. Eum doloribus aspernatur eaque velit quas, perspiciatis atque illo! Fugit, ratione.
+                        </p>
+
+                        <div class="home__btns">
+                            <a href="#contact" class="btn">Hire Me</a>
+                            <a href="#portfolio" class="btn btn--transparent">Portfolio</a>
+                        </div>
+                    </div>
+
+                    <div class="home__img-wrapper">
+                        <img src="assets/img/profile.png" alt="" class="home__img">
+                    </div>
+                </div>
+            </section>
 
             <!--================== ABOUT ======================-->
             <section class="about" id="about"></section>
