home section finalizada

--- a/index.html
+++ b/index.html
@@ -78,7 +78,28 @@
             </section>
 
             <!--================== ABOUT ======================-->
-            <section class="about" id="about"></section>
+            <section class="about section" id="about">
+              <div class="about__container container grid">
+                <div class="about__img-wrapper">
+                  <img src="assets/img/about.png" alt="" class="about__img">  
+                </div>
+
+                <div class="about__content">
+                  <h2 class="section__title" data-title="Who am i?">
+                    I'm Alexander Smith, a visual UI/UX Designer and Web Developer
+                  </h2>
+                  
+                  <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur cum expedita ad minima obcaecati alias molestiae, illum quae corrupti quos quo. Aspernatur laboriosam libero cupiditate qui quis voluptate natus reprehenderit.
+                  </p>
+
+                  <ul class="about__data grid">
+                    <li class="data__item">
+                      <h3 class="data__title"></h3>  
+                    </li>
+                  </ul>
+                </div>
+              </div>  
+            </section>
 
             <!--================== QUALIFICATION ==============-->
             <section class="qualification" id="qualification"></section>
