--- a/index.html
+++ b/index.html
@@ -94,9 +94,33 @@
 
                   <ul class="about__data grid">
                     <li class="data__item">
-                      <h3 class="data__title"></h3>  
+                      <h3 class="data__title">Name:</h3>
+                      <span class="data__description">Alexander Smith</span>  
                     </li>
+
+                    <li class="data__item">
+                        <h3 class="data__title">Age:</h3>
+                        <span class="data__description">24 Years</span>  
+                      </li>
+
+                      <li class="data__item">
+                        <h3 class="data__title">From:</h3>
+                        <span class="data__description">London, UK</span>  
+                      </li>
+
+                      <li class="data__item">
+                        <h3 class="data__title">Email:</h3>
+                        <span class="data__description">alexander@mail.com</span>  
+                      </li>
                   </ul>
+
+                  <div class="about__bottom">
+                    <a href="" class="btn">Download Cv</a>
+
+                    <div class="about__social-links">
+                      <a href="" class="about__social-links"></a>
+                    </div>
+                  </div>
                 </div>
               </div>  
             </section>
