--- a/index.html
+++ b/index.html
@@ -118,7 +118,21 @@
                     <a href="" class="btn">Download Cv</a>
 
                     <div class="about__social-links">
-                      <a href="" class="about__social-links"></a>
+                      <a href="" class="about__social-links">
+                        <i class="fa-brands fa-square-x-twitter"></i>
+                      </a>
+
+                      <a href="" class="about__social-links">
+                        <i class="fa-brands fa-square-instagram"></i>
+                      </a>
+
+                      <a href="" class="about__social-links">
+                        <i class="fa-brands fa-square-facebook"></i>
+                      </a>
+
+                      <a href="" class="about__social-links">
+                        <i class="fa-brands fa-linkedin"></i>
+                      </a>
                     </div>
                   </div>
                 </div>
